<?xml version="1.0" encoding="utf-8"?>
<input-method xmlns:android="http://schemas.android.com/apk/res/android"
    android:settingsActivity="com.prototype.keyboard.ui.MainActivity">
    <subtype
        android:name="@string/subtype_en"
        android:imeSubtypeLocale="en_US"
        android:imeSubtypeMode="keyboard" />
    <subtype
        android:name="@string/subtype_es"
        android:imeSubtypeLocale="es_ES"
        android:imeSubtypeMode="keyboard" />
    <subtype
        android:name="@string/subtype_de"
        android:imeSubtypeLocale="de_DE"
        android:imeSubtypeMode="keyboard" />
    <subtype
        android:name="@string/subtype_fr"
        android:imeSubtypeLocale="fr_FR"
        android:imeSubtypeMode="keyboard" />
    <subtype
        android:name="@string/subtype_hi"
        android:imeSubtypeLocale="hi_IN"
        android:imeSubtypeMode="keyboard" />
</input-method>
